# routes/transactions.js
@@ -13,7 +13,7 @@ const axios = require("axios");
 router.post('/', verifyToken, async function (req, res) {
 
     function debitAccount(accountFrom, amount) {
-        accountFrom.balance -= amount
+        accountFrom.balance -= parseInt(amount)
         accountFrom.save()
     }
     try {
@@ -28,7 +28,7 @@ router.post('/', verifyToken, async function (req, res) {
        }
 
        //402 Insufficient funds
-       if (req.body.amount > accountFrom.balance){
+       if (parseInt(req.body.amount) > parseInt(accountFrom.balance)){
            return res.status(402).send({error: "Insufficient funds"})
        }
 
@@ -69,7 +69,7 @@ router.post('/', verifyToken, async function (req, res) {
            accountTo: req.body.accountTo,
            explanation: req.body.explanation,
            statusDetail: statusDetail,
-           senderName: (await User.findOne({id: req.userId})).name,
+           senderName: (await User.findOne({_id: req.userId})).name,
        }).save()
 
        //Subtract amount from account
@@ -162,19 +162,19 @@ router.post('/b2b', async function (req, res) {
        }
 
        const accountToOwner = await User.findOne({_id: accountTo.userId})
-       accountTo.balance += amount
+       accountTo.balance += parseInt(amount)
        accountTo.save();
 
        await Transaction.create({
            userId: accountToOwner._id,
-           accountFrom:payload.accountFrom ,
-           accountTo:payload.accountTo ,
-           amount:payload.amount ,
-           currency:payload.currency ,
-           createdAt:payload.createdAt ,
-           explanation:payload.explanation ,
-           senderName:payload.senderName ,
-           receiverName:accountToOwner.name ,
+           accountFrom:payload.accountFrom,
+           accountTo:payload.accountTo,
+           amount:payload.amount,
+           currency:payload.currency,
+           createdAt:payload.createdAt,
+           explanation:payload.explanation,
+           senderName:payload.senderName,
+           receiverName:accountToOwner.name,
            status:'Completed',
            statusDetail: 'Received'
        })
@@ -186,8 +186,8 @@ router.post('/b2b', async function (req, res) {
    }
 })
 
-async  function getRates(from,to) {
-    const response = await axios.get('https://api.exchangerate.host/latest?base='+from)
+async  function getRates(from, to) {
+    const response = await axios.get('https://api.exchangerate.host/latest?base=' + from)
     console.log(`Converting ${from} to ${to}`)
     for (const rate in response.data.rates) {
         if (rate === to) {
@@ -197,5 +197,15 @@ async  function getRates(from,to) {
     }
 }
 
+router.get('/', verifyToken, async (req, res) => {
+
+    //Get user's transactions
+    const transactions = await Transaction.find({userId: req.userId})
+
+    // Return them
+
+    res.status(200).json(transactions)
+
+})
 
 module.exports = router
